--- a/addtocart/src/com/pom.xml
+++ b/addtocart/src/com/pom.xml
@@ -1,5 +1,5 @@
 <dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>8.0.33</version> <!-- Check for updates: https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <version>9.2.0</version>
 </dependency>
